--- a/spacegame/index.html
+++ b/spacegame/index.html
@@ -5,6 +5,7 @@
   <title>Safiina</title>
 
   <link rel="stylesheet" type="text/css" href="style/core.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="icon" type="image/png" href="constructor.png">
 
   <script src="js/game.js" type="text/javascript"></script>
@@ -14,7 +15,5 @@
 </head>
 <body onload="init();">
   <canvas id="easel" ></canvas>
-  <div id="menus"></div>
-  <div id="ui"></div>
 </body>
 </html>
